plugins {
    id 'org.springframework.boot' version '2.7.18'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'pl.eengine'
version = '0.1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'com.googlecode.xades4j:xades4j:1.5.0'
    implementation 'org.bouncycastle:bcpkix-jdk15on:1.70'
    implementation 'org.bouncycastle:bcprov-jdk15on:1.70'
    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.8'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

def xadesJvmArgs = [
        '--add-opens=java.base/java.lang=ALL-UNNAMED'
]

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs(xadesJvmArgs)
}

tasks.named('bootRun') {
    jvmArgs(xadesJvmArgs)
}
